cmake_minimum_required(VERSION 3.28)
project(tree/BinaryTree.c)

set(CMAKE_C_STANDARD 11)

add_executable(main.c
        sort/BubbleSort.c
        sort/BubbleSort.c
        sort/SelectionSort.c
        sort/InsertionSort.c
        sort/ShellSort.c
        sort/QuickSort.c
        sort/MergeSort.c
        sort/HeapSort.c
        sort/CountingSort.c
        sort/BucketSort.c
        sort/RadixSort.c
        tree/BinaryTree.c
        tree/BinarySearchTree.c
        tree/BalancedBinarySearchTree.c
        tree/B-Tree.c
        tree/B+Tree.c
        tree/Heap.c
        tree/TrieTree.c
        tree/RedBlackTree.c
        tree/AdelsonVelskyAndLandisTree.c
        tree/SplayTree.c
        tree/SegmentTree.c
        tree/IntervalTree.c
        stack/ArrayBasedStack.c
        stack/LinkedListBasedStack.c
        stack/DynamicArrayBasedStack.c
        stack/FixedSizeArrayBasedStack.c
        stack/CircularBufferBasedStack.c
        stack/DoublyLinkedListBasedStack.c
        stack/StackLinkedListBasedStack.c
        queue/ArrayBasedQueue.c
        queue/CircularBufferBasedQueue.c
        queue/LinkedListBasedQueue.c
        queue/DoublyLinkedListBasedQueue.c
        queue/PriorityQueue.c
        queue/Deque.c
        queue/FixedSizeArrayBasedQueue.c
        queue/DynamicArrayBasedQueue.c
        table/SequentialList.c
        table/SinglyLinkedList.c
        table/DoublyLinkedList.c
        table/CircularLinkedList.c
        table/StaticLinkedList.c
        table/DynamicArray.c
        table/SkipList.c
        table/HashTable.c
        table/Rope.c
        table/Bitmap.c
        table/GeneralizedList.c
        unionFindSet/ArrayUnionFindSet.c
        unionFindSet/LinkedListUnionFindSet.c
        graph/AdjacencyMatrix.c
        graph/AdjacencyList.c
        graph/EdgeSet.c
        graph/AdjacencyMultilist.c
        graph/MatrixList.c
        sort/BubbleSort.c
        sort/HeapSort.c
        sort/HeapSort.c
        tree/BinaryTree.c
)

add_executable(main
        sort/BubbleSort.c
        sort/BubbleSort.c
        sort/BubbleSort.c
        sort/SelectionSort.c
        sort/InsertionSort.c
        sort/ShellSort.c
        sort/QuickSort.c
        sort/MergeSort.c
        sort/HeapSort.c
        sort/CountingSort.c
        sort/BucketSort.c
        sort/RadixSort.c
        tree/BinaryTree.c
        tree/BinarySearchTree.c
        tree/BalancedBinarySearchTree.c
        tree/B-Tree.c
        tree/B+Tree.c
        tree/Heap.c
        tree/TrieTree.c
        tree/RedBlackTree.c
        tree/AdelsonVelskyAndLandisTree.c
        tree/SplayTree.c
        tree/SegmentTree.c
        tree/IntervalTree.c
        stack/ArrayBasedStack.c
        stack/LinkedListBasedStack.c
        stack/DynamicArrayBasedStack.c
        stack/FixedSizeArrayBasedStack.c
        stack/CircularBufferBasedStack.c
        stack/DoublyLinkedListBasedStack.c
        stack/StackLinkedListBasedStack.c
        queue/ArrayBasedQueue.c
        queue/CircularBufferBasedQueue.c
        queue/LinkedListBasedQueue.c
        queue/DoublyLinkedListBasedQueue.c
        queue/PriorityQueue.c
        queue/Deque.c
        queue/FixedSizeArrayBasedQueue.c
        queue/DynamicArrayBasedQueue.c
        table/SequentialList.c
        table/SinglyLinkedList.c
        table/DoublyLinkedList.c
        table/CircularLinkedList.c
        table/StaticLinkedList.c
        table/DynamicArray.c
        table/SkipList.c
        table/HashTable.c
        table/Rope.c
        table/Bitmap.c
        table/GeneralizedList.c
        unionFindSet/ArrayUnionFindSet.c
        unionFindSet/LinkedListUnionFindSet.c
        graph/AdjacencyMatrix.c
        graph/AdjacencyList.c
        graph/EdgeSet.c
        graph/AdjacencyMultilist.c
        graph/MatrixList.c
        sort/BubbleSort.c
        sort/HeapSort.c
        sort/HeapSort.c
        tree/BinaryTree.c
)